--- a/index.html
+++ b/index.html
@@ -65,67 +65,67 @@
     </header>
     <!-- Main section-->
     <main>
-      <!-- Title -->
+      <!-- Title BEM -->
       <section class="hero overlay">
         <div class="container hero-flex">
           <h1 class="hero-title">
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button data-modal-open type="button" class="hero-button">
+          <button data-modal-open type="button" class="button">
             Заказать услугу
           </button>
         </div>
       </section>
-      <!-- Features -->
+      <!-- Features BEM -->
       <section class="features paddings">
         <div class="container">
           <h2 hidden>Преимущества</h2>
-          <ul class="features-group">
-            <li class="features-pstn">
-              <div class="features-icon-box">
-                <svg class="features-icon">
+          <ul class="features__group">
+            <li class="features__pstn">
+              <div class="features-box">
+                <svg class="features-box__icon">
                   <use href="./images/ico/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="features-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-              <p class="features-text">
+              <h3 class="features__title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+              <p class="features__text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="features-pstn">
-              <div class="features-icon-box">
-                <svg class="features-icon">
+            <li class="features__pstn">
+              <div class="features-box">
+                <svg class="features-box__icon">
                   <use href="./images/ico/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="features-title">ПУНКТУАЛЬНОСТЬ</h3>
-              <p class="features-text">
+              <h3 class="features__title">ПУНКТУАЛЬНОСТЬ</h3>
+              <p class="features__text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="features-pstn">
-              <div class="features-icon-box">
-                <svg class="features-icon">
+            <li class="features__pstn">
+              <div class="features-box">
+                <svg class="features-box__icon">
                   <use href="./images/ico/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="features-title">ПЛАНИРОВАНИЕ</h3>
-              <p class="features-text">
+              <h3 class="features__title">ПЛАНИРОВАНИЕ</h3>
+              <p class="features__text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="features-pstn">
-              <div class="features-icon-box">
-                <svg class="features-icon">
+            <li class="features__pstn">
+              <div class="features-box">
+                <svg class="features-box__icon">
                   <use href="./images/ico/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="features-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-              <p class="features-text">
+              <h3 class="features__title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+              <p class="features__text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
@@ -133,10 +133,10 @@
           </ul>
         </div>
       </section>
-      <!-- What we do -->
+      <!-- What we do BEM -->
       <section class="projects paddings">
         <div class="container">
-          <h2 class="projects-title">Чем мы занимаемся</h2>
+          <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="grid-set list-pad">
             <li class="grid-set-item itms-list">
               <img
@@ -145,7 +145,7 @@
                 width="370"
                 height="294"
               />
-              <p class="project-overlay">Десктопные приложения</p>
+              <p class="project__overlay">Десктопные приложения</p>
             </li>
             <li class="grid-set-item itms-list">
               <img
@@ -154,11 +154,11 @@
                 width="370"
                 height="294"
               />
-              <p class="project-overlay">Мобильные приложения</p>
+              <p class="project__overlay">Мобильные приложения</p>
             </li>
             <li class="grid-set-item itms-list">
               <img src="./images/img.jpg" alt="Box3" width="370" height="294" />
-              <p class="project-overlay">Дизайнерские решения</p>
+              <p class="project__overlay">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -407,49 +407,49 @@
           </div>
         </div>
       </section>
-      <!-- Clients Section -->
+      <!-- Clients Section BEM -->
       <section class="paddings">
         <div class="container">
-          <h2 class="clients-title">Постоянные клиенты</h2>
+          <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="clients-list grid-set">
-            <li class="clients-list-item grid-set-item">
-              <a class="clients-list-link">
-                <svg class="icon-clients">
+            <li class="grid-set-item">
+              <a class="clients-list__link">
+                <svg class="clients-list__icon">
                   <use href="./images/ico/icons.svg#icon-client-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list-item grid-set-item">
-              <a class="clients-list-link">
-                <svg class="icon-clients">
+            <li class="grid-set-item">
+              <a class="clients-list__link">
+                <svg class="clients-list__icon">
                   <use href="./images/ico/icons.svg#icon-client-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list-item grid-set-item">
-              <a class="clients-list-link">
-                <svg class="icon-clients">
+            <li class="grid-set-item">
+              <a class="clients-list__link">
+                <svg class="clients-list__icon">
                   <use href="./images/ico/icons.svg#icon-client-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list-item grid-set-item">
-              <a class="clients-list-link">
-                <svg class="icon-clients">
+            <li class="grid-set-item">
+              <a class="clients-list__link">
+                <svg class="clients-list__icon">
                   <use href="./images/ico/icons.svg#icon-client-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list-item grid-set-item">
-              <a class="clients-list-link">
-                <svg class="icon-clients">
+            <li class="grid-set-item">
+              <a class="clients-list__link">
+                <svg class="clients-list__icon">
                   <use href="./images/ico/icons.svg#icon-client-5"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list-item grid-set-item">
-              <a class="clients-list-link">
-                <svg class="icon-clients">
+            <li class="grid-set-item">
+              <a class="clients-list__link">
+                <svg class="clients-list__icon">
                   <use href="./images/ico/icons.svg#icon-client-6"></use>
                 </svg>
               </a>
