--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,9 @@
       referrerpolicy="no-referrer"
     />
     <!-- Custom styles -->
+	  <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+	 
   </head>
 
   <body>
