--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 width="370"
                 height="294"
               />
-              <p class="project__overlay">Десктопные приложения</p>
+              <p class="project-overlay">Десктопные приложения</p>
             </li>
             <li class="grid-set-item itms-list">
               <img
@@ -156,11 +156,11 @@
                 width="370"
                 height="294"
               />
-              <p class="project__overlay">Мобильные приложения</p>
+              <p class="project-overlay">Мобильные приложения</p>
             </li>
             <li class="grid-set-item itms-list">
               <img src="./images/img.jpg" alt="Box3" width="370" height="294" />
-              <p class="project__overlay">Дизайнерские решения</p>
+              <p class="project-overlay">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
